--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Japanese Learning Site</title>
+	<title>Sakura-Go</title>
+	<link rel="stylesheet" href="japanese.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>Japanese Learning Site</h1>
+<h1>Sakura-Go</h1>
+<div class="row">
+  <div class="col-lg-3 col-md-6 col-s-12">
+    <section id="kanji">
+      <h2>漢字</h2>
+      <h3 id="title-kanji">Kanji</h3>
+  	</section>
+  </div>
+  <div class="col-lg-3 col-md-6 col-s-12">
+  	<section id="vocab">
+  		<h2>単語</h2>
+  		<h3 id="title-vocab">Vocab</h3>
+  	</section>
+  </div>
+  <div class="col-lg-3 col-md-6 col-s-12">
+    <section id="hiragana">
+      <h2>ひらがな</h2>
+      <h3 id="title-hiragana">Hiragana</h3>
+    </section>
+  </div>
+  <div class="col-lg-3 col-md-6 col-s-12">
+    <section id="katakana">
+      <h2>カタカナ</h2>
+      <h3 id="title-katakana">Katakana</h3>
+    </section>
+  </div>
+</div>
 </body>
 </html>
