--- a/site/index.html
+++ b/site/index.html
@@ -7,32 +7,63 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>Sakura-Go</h1>
+
+<header>
+
+   <h1>Sakura-Go 桜語</h1>
+    
+   <nav id="nav-bar">
+     <ul>
+       <li><a href="#" class="nav-link">Kanji</a></li>
+       <li><a href="#" class="nav-link">Vocab</a></li>
+       <li><a href="#" class="nav-link">Hiragana</a></li>
+       <li><a href="#" class="nav-link">Katakana</a></li>
+     </ul>
+   </nav>
+
+ </header>
+
+ <div id="blossom-image"></div>
+
+ <section id="about-site" class="text">
+ 	<h2>About This Site</h2>
+ 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus justo vitae iaculis posuere. Praesent faucibus ante id dolor tincidunt, nec vestibulum velit tristique. Cras euismod egestas augue, euismod efficitur purus sodales sed. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi eu arcu odio. Nulla luctus elementum aliquet. Donec ac diam ut augue bibendum sodales. Etiam placerat ac lacus vitae condimentum. Praesent vehicula, quam at fringilla vestibulum, nulla metus sollicitudin mauris, nec pellentesque mi mauris vitae urna. Nulla non diam nec lectus porttitor suscipit. Aliquam eu ante justo. Quisque nibh elit, molestie ac nibh at, commodo ullamcorper orci.</p>
+ </section>
+
+<section id="about-japanese" class="text">
+ 	<h2>About the Japanese Writing System</h2>
+ 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce cursus justo vitae iaculis posuere. Praesent faucibus ante id dolor tincidunt, nec vestibulum velit tristique. Cras euismod egestas augue, euismod efficitur purus sodales sed. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi eu arcu odio. Nulla luctus elementum aliquet. Donec ac diam ut augue bibendum sodales. Etiam placerat ac lacus vitae condimentum. Praesent vehicula, quam at fringilla vestibulum, nulla metus sollicitudin mauris, nec pellentesque mi mauris vitae urna. Nulla non diam nec lectus porttitor suscipit. Aliquam eu ante justo. Quisque nibh elit, molestie ac nibh at, commodo ullamcorper orci.</p>
+ </section>
+
 <div class="row">
   <div class="col-lg-3 col-md-6 col-s-12">
-    <section id="kanji">
-      <h2>漢字</h2>
-      <h3 id="title-kanji">Kanji</h3>
-  	</section>
+    <div id="kanji" class="link-tiles">
+      <h3>漢字</h3>
+      <h4 id="title-kanji">Kanji</h4>
+  	</div>
   </div>
   <div class="col-lg-3 col-md-6 col-s-12">
-  	<section id="vocab">
-  		<h2>単語</h2>
-  		<h3 id="title-vocab">Vocab</h3>
-  	</section>
+  	<div id="vocab" class="link-tiles">
+  		<h3>単語</h3>
+  		<h4 id="title-vocab">Vocab</h4>
+  	</div>
   </div>
   <div class="col-lg-3 col-md-6 col-s-12">
-    <section id="hiragana">
-      <h2>ひらがな</h2>
-      <h3 id="title-hiragana">Hiragana</h3>
-    </section>
+    <div id="hiragana" class="link-tiles">
+      <h3>ひらがな</h3>
+      <h4 id="title-hiragana">Hiragana</h4>
+    </div>
   </div>
   <div class="col-lg-3 col-md-6 col-s-12">
-    <section id="katakana">
-      <h2>カタカナ</h2>
-      <h3 id="title-katakana">Katakana</h3>
-    </section>
+    <div id="katakana" class="link-tiles">
+      <h3>カタカナ</h3>
+      <h4 id="title-katakana">Katakana</h4>
+    </div>
   </div>
 </div>
+
+<footer>
+	<p>some text</p>
+</footer>
 </body>
 </html>
